# multi_topic_with_books

./: .gitignore  Cargo.toml  README.md
books/: bourgeois  faust  silmarilion
src/: book_consumer.rs  book_producer.rs  lib.rs  line.rs  main.rs
